# python

coworkers/GO/Py7Web/m06_02/: 01_aiohttp_client.py  02_aiohttp_custom_session.py  03_privat_api.py  client.py  pyproject.toml  server.py
coworkers/GO/Py7Web/m06_02/file/: main_sync.py
coworkers/GO/Py7Web/m06_02/simple-chat/: index.html
coworkers/GO/Py7Web/m06_02/task_runner/: main.py
coworkers/GO/Py7Web/m09_01/: pyproject.toml
coworkers/GO/Py7Web/m09_02/: config.ini  crud.py  main.py  main_contact.py  pyproject.toml
coworkers/GO/Py7Web/m09_02/database/: db.py  models.py  repository.py
coworkers/GO/Py7Web/m09_02/migrations/: env.py
coworkers/GO/Py7Web/m09_02/migrations/versions/: 3900ca5e9fbf_add_table_contact.py  b467de16e4a9_init.py
coworkers/GO/Py7Web/m09_02/seed/: contacts.py  relationship.py  students.py  teachers.py
coworkers/GO/Py7Web/m12_01/chat/: pyproject.toml
coworkers/GO/Py7Web/m12_01/db_async/: main.py  pyproject.toml
coworkers/GO/Py7Web/m12_01/db_async/config/: app_cfg.yaml
coworkers/GO/Py7Web/m12_01/db_async/migrations/: env.py
coworkers/GO/Py7Web/m12_01/db_async/src/: models.py  routes.py  settings.py  views.py
coworkers/GO/Py7Web/m12_02/: main.py  pyproject.toml
coworkers/GO/Py7Web/m12_02/config/: config.yaml
coworkers/GO/Py7Web/m12_02/migrations/: env.py
coworkers/GO/Py7Web/m12_02/migrations/versions/: 4f041858e232_init.py
coworkers/GO/Py7Web/m12_02/src/: middlewares.py  routes.py  settings.py
coworkers/GO/Py7Web/m13_Django/: pyproject.toml
coworkers/GO/Py7Web/m14_01/: app.py  data.json  main.py  pyproject.toml
coworkers/GO/Py7Web/m14_01/war_info/: links.json  losses.json
coworkers/GO/Py7Web/m14_02/: app.py  authors-1672336730.041996.json  authors.json  main.py  main_one.py  pyproject.toml
coworkers/GO/Py7Web/m15_01/: app.py  app_refresh.py  db.py  main.py  pyproject.toml
coworkers/GO/Py7Web/m15_01/config/: config.yaml
coworkers/GO/Py7Web/m15_01/db/: connect.py
coworkers/GO/Py7Web/m15_01/migrations/: env.py
coworkers/GO/Py7Web/m15_01/src/: constants.py  models.py  service_config.py
coworkers/GO/Py8Web/m08_01/: pyproject.toml
coworkers/HOMEWORK2/Team11_AssistantBot-POETRY/Team11_AssistantBot/: Notepad.py  addressbook.py  main.py  pyproject.toml
coworkers/goit_web_hw10/: README.md  pyproject.toml
coworkers/goit_web_hw10/my_site/my_site/: settings.py
coworkers/goit_web_hw10/my_site/quotes/: admin.py  models.py  urls.py  utils.py  views.py
coworkers/goit_web_hw10/my_site/quotes/migrations/: 0001_initial.py  0002_alter_quote_author_alter_tag_name.py  0003_alter_tag_name.py
coworkers/goit_web_hw10/my_site/users/: forms.py  views.py
coworkers/goit_web_hw11/: README.md  main.py  pyproject.toml
coworkers/goit_web_hw11/goit_web_hw11/: schemas.py
coworkers/goit_web_hw11/goit_web_hw11/config/: config.ini
coworkers/goit_web_hw11/goit_web_hw11/database/: models.py  seeds.py
coworkers/goit_web_hw11/goit_web_hw11/repository/: users.py
coworkers/goit_web_hw11/goit_web_hw11/routes/: users.py
coworkers/goit_web_hw11/migrations/: env.py
coworkers/goit_web_hw11/migrations/versions/: b22d0d1a1bee_init.py
coworkers/goit_web_hw12/: README.md  main.py  pyproject.toml
coworkers/goit_web_hw12/goit_web_hw12/: schemas.py
coworkers/goit_web_hw12/goit_web_hw12/config/: config.ini
coworkers/goit_web_hw12/goit_web_hw12/database/: db.py  models.py
coworkers/goit_web_hw12/goit_web_hw12/repository/: auth.py  contacts.py
coworkers/goit_web_hw12/goit_web_hw12/routes/: auth.py  users.py
coworkers/goit_web_hw12/goit_web_hw12/services/: auth.py
coworkers/goit_web_hw12/migrations/: env.py
coworkers/goit_web_hw12/migrations/versions/: c98148a04b45_init.py
coworkers/goit_web_hw7/: README.md  config.ini  main.py  my_select.py  pyproject.toml  seeds.py
coworkers/goit_web_hw7/alembic/: env.py
coworkers/goit_web_hw7/alembic/versions/: df36326f49e3_init.py
coworkers/goit_web_hw7/database/: db.py  models.py
coworkers/goit_web_hw8/: README.md  config.ini  create.py  models.py  pyproject.toml
coworkers/goit_web_hw8/rabbit/: connect.py  consumer.py  consumer_email.py  consumer_sms.py  produser.py
coworkers/goit_web_hw9/: README.md  authors_scrapy.json  bsoup.py  config.ini  create.py  main_scrapy.py  models.py  my_select.py  pyproject.toml
django/my_pet_project/nashafirma_django/nashafirma/: pyproject.toml
django/my_pet_project/nashafirma_django/nashafirma/nashafirma/: asgi.py  settings.py  urls.py  wsgi.py
django/my_pet_project/nashafirma_django/nashafirma/order/: admin.py  forms.py  models.py  urls.py  views.py
django/my_pet_project/nashafirma_django/nashafirma/orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django/my_pet_project/nashafirma_django/nashafirma/product/: views.py
django/my_pet_project/nashafirma_django/nashafirma/products/: admin.py  forms.py  models.py  urls.py  views.py
django/my_pet_project/nashafirma_django/nashafirma/templates/: 404.html  base.html
django/my_pet_project/nashafirma_django/nashafirma/user/: forms.py  models.py  urls.py  views.py
django/my_pet_project/nashafirma_django/nashafirma/users/: forms.py  models.py  urls.py  validators.py  views.py
django/my_pet_project/nashafirma_django/nashafirma/utils/: utils.py
fastapi/my_pet_project/nashafirma_fastapi/: main.py  pyproject.toml
my_project/Address_book/: .pypirc  README.md  pyproject.toml
my_project/Address_book/address_book/: calculator.py  files_sort.py
my_project/Finaly_LLM_ChatBot_vad/DS_Finaly_Project/temp/pdf-responser-main/: pyproject.toml
scripts/animals_book_project/: pyproject.toml  requirements.txt
scripts/animals_book_project/Programme/: main.py
scripts/animals_book_project/Programme/Animals/DomesticAnimals/: Dogs.py  Hamsters.py
scripts/animals_book_project/Programme/Animals/PackAnimals/: Donkeys.py
scripts/animals_book_project/Programme/MySQLDB/: Creating_database_at_start_up.py  MySQLQueries.py
scripts/animals_book_project/Programme/RegistryManagement/: GettingNewAnimal.py  TeachAnimalNewCommands.py
scripts/vad_address_book/: pyproject.toml
(+1520 files in other folders)
