[tool.poetry]
name = "goit-web-hw11"
version = "0.1.0"
description = ""
authors = ["OlehVakulchyk <4020405@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
pydantic = {extras = ["email"], version = "^1.10.7"}
faker = "^18.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
