[tool.poetry]
name = "goit-web-hw9"
version = "0.1.0"
description = ""
authors = ["OlehVakulchyk <4020405@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw9"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
mongoengine = "^0.27.0"
redis = "^4.5.4"
redis-lru = "^0.1.2"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
