[tool.poetry]
name = "address-book"
version = "0.1.0"
description = ""
authors = ["VadimTrubay <vadnetvadnet@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
numexpr = "^2.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

