[tool.poetry]
name = "m12_02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
PyYAML = "^6.0"
gino = "^1.0.1"
Jinja2 = "^3.1.2"
aiohttp-jinja2 = "^1.5"
alembic = "^1.9.0"
psycopg2 = "^2.9.5"
cryptography = "^38.0.4"
aiohttp-session = {extras = ["secure"], version = "^2.12.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
