[tool.poetry]
name = "m15-01"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m15_01"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.46"
psycopg2 = "^2.9.5"
alembic = "^1.9.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.3"
python-multipart = "^0.0.5"
cloudinary = "^1.31.0"
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
pytest = "^7.2.1"
requests = "^2.28.2"
httpx = "^0.23.3"
black = {extras = ["d"], version = "^22.12.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
