[tool.poetry]
name = "assistbot-11team"
version = "1.0"
description = "Assistant bot will help you save contacts and notes"
authors = ["Dima"]
license = "MIT"
readme = "README.md"
packages = [{include = "assistbot_11team"}]

[tool.poetry.dependencies]
python = "^3.7"
color-it = "2.1.3"
colorit = "0.1.0"
prettytable = "3.6.0"
prompt-toolkit = "3.0.38"
typing = "3.7.4.3"
wcwidth = "0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
