[tool.poetry]
name = "nashafirma"
version = "0.1.0"
description = ""
authors = ["VadimTrubay <vadnetvadnet@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-environ = "^0.11.2"
admin-totals = "1.0.1"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
