[tool.poetry]
name = "db_async"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.45"
asyncpg = "^0.27.0"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"
aiohttp-jinja2 = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
